force-app/main/default/objects/Execution__c/Execution__c.object-meta.xml
<CustomObject>
    <label>Execution</label>
    <pluralLabel>Executions</pluralLabel>
    <nameField>
        <label>Execution Name</label>
        <type>AutoNumber</type>
        <displayFormat>EXEC-{0000}</displayFormat>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>