force-app/main/default/objects/Execution__c/fields/CurrentStage__c.field-meta.xml
<CustomField>
    <fullName>CurrentStage__c</fullName>
    <label>Current Stage</label>
    <type>Lookup</type>
    <referenceTo>Stage__c</referenceTo>
    <relationshipLabel>Current Executions</relationshipLabel>
    <relationshipName>CurrentExecutions</relationshipName>
</CustomField>