force-app/main/default/objects/Execution__c/fields/CurrentStep__c.field-meta.xml
<CustomField>
    <fullName>CurrentStep__c</fullName>
    <label>Current Step</label>
    <type>Lookup</type>
    <referenceTo>Step__c</referenceTo>
    <relationshipLabel>Current Executions</relationshipLabel>
    <relationshipName>CurrentStepExecutions</relationshipName>
</CustomField>