force-app/main/default/objects/Execution__c/fields/ExecutionData__c.field-meta.xml
<CustomField>
    <fullName>ExecutionData__c</fullName>
    <label>Execution Data</label>
    <type>LongTextArea</type>
    <length>131072</length>
</CustomField>