force-app/main/default/objects/Execution__c/fields/PendingApprovalId__c.field-meta.xml
<CustomField>
    <fullName>PendingApprovalId__c</fullName>
    <label>Pending Approval ID</label>
    <type>Text</type>
    <length>18</length>
</CustomField>