force-app/main/default/objects/Execution__c/fields/PendingApprovalRecordId__c.field-meta.xml
<CustomField>
    <fullName>PendingApprovalRecordId__c</fullName>
    <label>Pending Approval Record ID</label>
    <type>Text</type>
    <length>18</length>
</CustomField>