force-app/main/default/objects/Execution__c/fields/Process__c.field-meta.xml
<CustomField>
    <fullName>Process__c</fullName>
    <label>Process</label>
    <type>Lookup</type>
    <referenceTo>Process__c</referenceTo>
    <relationshipLabel>Executions</relationshipLabel>
    <relationshipName>Executions</relationshipName>
</CustomField>