force-app/main/default/objects/Execution__c/fields/TargetRecordId__c.field-meta.xml
<CustomField>
    <fullName>TargetRecordId__c</fullName>
    <label>Target Record ID</label>
    <type>Text</type>
    <length>18</length>
</CustomField>