force-app/main/default/objects/Execution__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <label>User</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Executions</relationshipLabel>
    <relationshipName>UserExecutions</relationshipName>
</CustomField>