force-app/main/default/objects/Execution__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <label>All Executions</label>
    <filterScope>Everything</filterScope>
    <columns>NAME</columns>
    <columns>Process__c</columns>
    <columns>User__c</columns>
    <columns>Status__c</columns>
    <columns>StartedAt__c</columns>
    <columns>CurrentStage__c</columns>
    <columns>CurrentStep__c</columns>
</ListView>